--- a/package.json
+++ b/package.json
@@ -13,16 +13,11 @@
     "electron-updater": "^1.4.2"
   },
   "build": {
-    "appId": "com.github.iffy.electronupdaterexample",
-    "mac": {
-      "category": "your.app.category.type",
-      "target": [
-        "zip",
-        "dmg"
-      ]
-    },
-    "nsis": {
-      "perMachine": true
+        "publish": [{
+            "provider": "github",
+            "owner": "alejandroantolin",
+            "repo": "electron-updater-example"
+        }]
     }
-  }
+  
 }
